vlib/v/parser/tests/postfix_err_b.out
vlib/v/parser/tests/postfix_err_b.vv:6:7: error: `++` operator can only be used as a statement
    4 |     for _ in 0..3 {
    5 |         unsafe {
    6 |             *(a++) = 0
      |                ~~
    7 |         }
    8 |     }
