vlib/v/parser/tests/postfix_err_b.vv
fn main(){
	mut a := 22

	for _ in 0..3 {
		unsafe {
			*(a++) = 0
		}
	}
}
